# llvm

./: README.md
buildbot/: configure.py
clang/include/clang/Sema/: Sema.h
clang/lib/ARCMigrate/: CMakeLists.txt
clang/lib/Basic/Targets/: SPIR.h
clang/lib/CodeGen/: BackendUtil.cpp  CMakeLists.txt
clang/lib/Driver/ToolChains/: Clang.cpp
clang/lib/Frontend/: InitPreprocessor.cpp
clang/lib/Sema/: CMakeLists.txt  SemaSYCL.cpp
clang/tools/driver/: CMakeLists.txt
llvm-spirv/include/: LLVMSPIRVExtensions.inc  LLVMSPIRVLib.h  LLVMSPIRVOpts.h
llvm-spirv/lib/SPIRV/: CMakeLists.txt  LLVMToSPIRVVulkan.cpp  LLVMToSPIRVVulkan.h  SPIRVInternal.h  SPIRVReader.cpp  SPIRVWriter.cpp  SPIRVWriter.h
llvm-spirv/lib/SPIRV/libSPIRV/: SPIRVEntry.h  SPIRVEnum.h  SPIRVFunction.h  SPIRVInstruction.h  SPIRVModule.cpp  SPIRVModule.h  SPIRVNameMapEnum.h  SPIRVType.cpp  SPIRVType.h
llvm-spirv/test/: CMakeLists.txt
llvm-spirv/test/vulkan/: doubleBranch.ll  explicitWorkgroupSize.ll  simpleAccessor.ll  simpleBranch.ll  simpleLoop.ll
llvm-spirv/tools/llvm-spirv/: llvm-spirv.cpp
llvm/include/llvm/ADT/: Triple.h
llvm/include/llvm/Transforms/BBSort/: BBSort.h
llvm/include/llvm/Transforms/IPO/: PassManagerBuilder.h
llvm/include/llvm/Transforms/InstCombine/: InstCombiner.h
llvm/lib/Passes/: CMakeLists.txt  PassBuilder.cpp  PassRegistry.def
llvm/lib/Support/: Triple.cpp
llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/BBSort/: BBSort.cpp  CMakeLists.txt  LLVMBuild.txt
llvm/lib/Transforms/IPO/: PassManagerBuilder.cpp
llvm/lib/Transforms/InstCombine/: InstCombineCalls.cpp  InstCombineLoadStoreAlloca.cpp  InstructionCombining.cpp
llvm/lib/Transforms/Scalar/: StructurizeCFG.cpp
llvm/tools/opt/: CMakeLists.txt
sycl/: CMakeLists.txt
sycl/doc/: GetStartedGuide.md
sycl/include/CL/__spirv/: spirv_vars.hpp
sycl/include/CL/sycl/: accessor.hpp  atomic.hpp  backend_types.hpp  handler.hpp
sycl/include/CL/sycl/detail/: aligned_allocator.hpp  kernel_desc.hpp  pi.h  pi.hpp
sycl/plugins/: CMakeLists.txt
sycl/plugins/vulkan/: CMakeLists.txt  pi_vulkan.cpp  pi_vulkan.hpp  renderdoc_app.h
sycl/source/: CMakeLists.txt  handler.cpp
sycl/source/detail/: config.hpp  device_filter.cpp  pi.cpp
sycl/source/detail/program_manager/: program_manager.cpp
sycl/test/: CMakeLists.txt
sycl/test/atomic_ref/: accessor.cpp  add.cpp  compare_exchange.cpp  exchange.cpp  load.cpp  max.cpp  min.cpp  store.cpp  sub.cpp
sycl/test/basic_tests/: built-ins.cpp
sycl/test/basic_tests/accessor/: addrspace_exposure.cpp
sycl/test/extensions/: usm.cpp
sycl/test/function-pointers/: fp-as-kernel-arg.cpp  pass-fp-through-buffer.cpp
sycl/test/on-device/: lit.cfg.py
sycl/test/on-device/plugins/: sycl-ls-gpu-vulkan.cpp
sycl/test/plugins/: sycl-ls-gpu-vulkan.cpp
sycl/test/regression/: builtins_vector1.cpp
sycl/tools/: CMakeLists.txt  get_device_count_by_type.cpp
sycl/unittests/pi/: BackendString.hpp  CMakeLists.txt
sycl/unittests/pi/vulkan/: CMakeLists.txt  test_base_objects.cpp  test_commands.cpp  test_device.cpp  test_kernels.cpp  test_mem_obj.cpp  test_queue.cpp
